缓冲区管理:作用:环节Cpu与设备速度矛盾,,减少CPU的中断频率,,解决数据粒度不匹配的问题,,提高Cpu和IO设备的并行性...    单缓冲(工作区满,,缓冲区空)    双缓冲(工作区空,,一个缓冲区满,一个缓冲区空)        循环缓冲以及缓冲池(存放不同的缓冲队列)

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -313,3 +313,81 @@
 ### 总结
 
 ![image-20220830095839946](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300958400.png)
+
+## 5.2_4 缓冲区管理
+
+![image-20220830103827521](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301038829.png)
+
+### 作用
+
+![image-20220830104539514](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301045537.png)
+
+### 单缓冲
+
+> 假定`工作区满,缓冲区空`
+
+![image-20220830105415303](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301054083.png)
+
+#### 总结
+
+> 平均耗时Max(C,T)+M
+
+![image-20220830110426738](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301104819.png)
+
+### 双缓冲
+
+> 假定:`工作区空,一个缓冲区满,一个缓冲区空`
+
+- T>C+M
+
+![image-20220830111201327](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301112700.png)
+
+- T<C+M
+
+![image-20220830111835133](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301118908.png)
+
+#### 结论
+
+> 平均耗时:Max(T,C+M)
+
+![image-20220830112050092](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301120338.png)
+
+### 单/双缓冲在通信时的区别
+
+- 单缓冲通信(单向数据传输)
+
+![image-20220830112253913](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301122999.png)
+
+- 双缓冲通信(双向数据传输)
+
+![image-20220830112750866](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301127123.png)
+
+### 循环缓冲区
+
+![image-20220830112840996](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301128424.png)
+
+### 缓冲池
+
+![image-20220830124606644](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301246287.png)
+
+- 收容输入
+
+![image-20220830124905491](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301249895.png)
+
+![image-20220830124941468](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301249468.png)
+
+- 提取输入
+
+![image-20220830125244322](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301252992.png)
+
+- 提取输出
+
+![image-20220830131216650](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301312254.png)
+
+- 提取输出
+
+![image-20220830131339409](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301313156.png)
+
+### 总结
+
+![image-20220830131825076](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301318565.png)
