磁盘的结构:磁盘,,磁道,,扇区,,盘面,,柱面..以及对应的分类

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -391,3 +391,41 @@
 ### 总结
 
 ![image-20220830131825076](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301318565.png)
+
+## 5.3_1 磁盘的结构
+
+![image-20220830132933319](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301329965.png)
+
+### 磁盘,磁道,扇区
+
+![image-20220830134348133](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301343785.png)
+
+### 如何在磁盘中读/写数据
+
+1.![image-20220830134914562](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301349595.png)
+
+2.![image-20220830134959981](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301350393.png)
+
+### 盘面,柱面
+
+![image-20220830135227910](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301352280.png)
+
+![image-20220830135347802](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301353608.png)
+
+#### (柱面号,盘面号,扇区号)
+
+![image-20220830135617601](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301356546.png)
+
+### 磁盘的分类
+
+#### 磁头
+
+![image-20220830135705352](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301357808.png)
+
+#### 盘片是否可更换 
+
+![image-20220830135831597](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301358037.png)
+
+### 总结
+
+![image-20220830140008184](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301400546.png)
