磁盘调度算法::寻找(寻道)时间=启动时间+移动时间  延迟时间=磁道的位置定位到目标扇区的时间   传输时间=在目标扇区开始到结束的时间间隔                       由于扇区旋转的优化取决于硬件旋转,因此优化主要在于优化寻道时间,,磁盘调度算法优化磁头移动的方式即可

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -429,3 +429,63 @@
 ### 总结
 
 ![image-20220830140008184](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301400546.png)
+
+## 5.3_2 磁盘调度算法
+
+![image-20220830143336975](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301433999.png)
+
+### 寻找(寻道)时间Ts
+
+![image-20220830145243380](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301452692.png)
+
+![image-20220830145309395](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301453642.png)
+
+### 延迟时间Tr
+
+![image-20220830145911665](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301459417.png)
+
+![image-20220830150824412](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301508924.png)
+
+### 传输时间Tt
+
+![image-20220830151346162](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301513919.png)
+
+![image-20220830151644410](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301516399.png)
+
+### 平均存取时间Ta
+
+![image-20220830151733473](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301517288.png)
+
+### 优化(寻道时间)
+
+![image-20220830151831443](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301518689.png)
+
+### 磁盘调度算法
+
+#### 先来先服务算法FCFS
+
+![image-20220830152246574](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301522597.png)
+
+#### 最短寻找时间优先SSTF
+
+![image-20220830153249935](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301532639.png)
+
+#### 扫描算法SCAN
+
+![image-20220830153937730](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301539472.png)
+
+#### LOOK调度算法
+
+> 边走边看
+
+![image-20220830163617209](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301636465.png)
+
+#### 循环扫描算法C-SCAN
+
+![image-20220830163917579](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301639800.png)
+
+![image-20220830164006468](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301640587.png)
+
+### 总结
+
+![image-20220830164726841](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301647057.png)
