如何减少延迟时间:1.交替编号 2.错位命名 (本质上都是由于连续地址的扇区无法迅速的处理,,因此需要再多转一圈,导致延迟时间增加... 为何要(柱面号,盘面号,扇区号)而不是(盘面号,柱面号,扇区号)...因为减少磁头移动的次数,,,先柱面后盘面的话,连续的地址如果转完一圈之后,,改变的只是盘面,而不是柱面,,因此磁头也不必移动

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -489,3 +489,57 @@
 ### 总结
 
 ![image-20220830164726841](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301647057.png)
+
+## 5.3_3 如何减少延迟时间
+
+![image-20220830165422929](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301654114.png)
+
+> 连续的扇区之间需要有一小段时间处理
+>
+> 因此需要再来一圈才能到下一个
+
+![image-20220830165531561](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301655915.png)
+
+### 交替编号
+
+![image-20220830165935365](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208301659706.png)
+
+### 磁盘地址结构的设计
+
+> 为什么是(柱面号,盘面号,扇区号)
+>
+> 而不是(盘面号,柱面号,扇区号)?
+>
+> 答:为了减少磁头的移动所耗费的时间
+
+#### (盘面号,柱面号,扇区号)
+
+> 某些时候读取`物理地址相邻`的情况,即使是盘面号固定
+>
+> 当柱面号改变的时候,磁头需要移动(`硬件移动,耗时严重`)
+>
+> 因此不合理
+
+![image-20220831070426287](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208310704026.png)
+
+#### (柱面号,盘面号,扇区号)
+
+> 某些时候读取`物理地址相邻`的情况
+>
+> 柱面固定,盘面改变,`只需激活盘面的磁头`即可
+
+![image-20220831071415206](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208310714883.png)
+
+### 错位命名
+
+- 为了解决相邻部分的盘面扇区不能连续的处理
+
+![image-20220831124700557](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208311247206.png)
+
+*减少了延迟时间*
+
+![image-20220831124835274](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208311248411.png)
+
+### 总结
+
+![image-20220831125201927](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208311252497.png)
