磁盘的管理:磁盘的初始化(物理初始化(低级)和逻辑初始化(高级)  引导块:自举装入程序在ROM,自举程序在内存的固定位置,,便于修改    坏块的管理:简单的:逻辑格式化的时候将坏块标记出来,避免使用...或者是维护一个坏块链,管理备用扇区.....

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -543,3 +543,25 @@
 ### 总结
 
 ![image-20220831125201927](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208311252497.png)
+
+## 5.3_4 磁盘的管理
+
+### 磁盘初始化
+
+![image-20220831130659009](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208311307471.png)
+
+### 引导块
+
+![image-20220831195718449](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208311957714.png)
+
+### 坏块的管理
+
+> 属于硬件故障,OS无法修复
+>
+> 应该标记出来,不使用它
+
+![image-20220831200443986](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312004081.png)
+
+### 总结
+
+![image-20220831200540128](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312005415.png)
