固态硬盘SSD:读写单位(磁盘:块/扇区  固态:页/扇区)  擦除单位:块/磁道         均衡磨损技术:动态:优先选择读写次数更少的块  静态:将读多写少的文件挪动到老旧的块,因为读不会导致擦除,,因此可以让新的块去(写操作)磨损,,老的块负责存储这些文件

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -565,3 +565,51 @@
 ### 总结
 
 ![image-20220831200540128](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312005415.png)
+
+## 5.3_5 固态硬盘SSD
+
+![image-20220831201144259](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312011537.png)
+
+> `原理`--基于闪存--Flash Memory--属于电可擦除ROM
+>
+> 即EEPROM
+
+![image-20220831201208997](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312012684.png)
+
+### 机械硬盘VS固态硬盘
+
+![image-20220831201519222](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312015299.png)
+
+### 固态硬盘的结构
+
+> `磁盘`读写的单位:`块/扇区`
+>
+> `固态`读写的单位:`页/扇区`
+>
+> `固态`擦除的单位:`块/磁道`
+
+![image-20220831201759229](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312018844.png)
+
+#### 擦除
+
+> 以块的形式擦除
+>
+> 块内其他有数据的页复制到另一个块内即可
+>
+> 并且修改逻辑地址映射
+
+![image-20220831202531662](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312025831.png)
+
+### 磨损均衡技术
+
+> - 静态均衡:写入数据的时候,优先选择累计擦除次数少的新内存块
+>
+> - 动态均衡:将`读多写少`的文件挪动到老旧的块
+>
+>   读不会导致擦除,因此可以让新的块去(写操作)磨损,老的块存这些文件
+
+![image-20220831203636519](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312036867.png)
+
+> 理论情况下:固态硬盘的寿命 
+
+![image-20220831203811880](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220831203811880.png)
