计算机网络的组成以及分类....组成:硬件,软件,协议  工作方式:边缘和核心部分  功能组成:数据通信,资源共享..

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -602,9 +602,9 @@
 
 ### 磨损均衡技术
 
-> - 静态均衡:写入数据的时候,优先选择累计擦除次数少的新内存块
+> - 动态均衡:写入数据的时候,优先选择累计擦除次数少的新内存块
 >
-> - 动态均衡:将`读多写少`的文件挪动到老旧的块
+> - 静态均衡:将`读多写少`的文件挪动到老旧的块
 >
 >   读不会导致擦除,因此可以让新的块去(写操作)磨损,老的块存这些文件
 
