--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -4,7 +4,7 @@
 
 ![image-20220825211118132](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252111686.png)
 
-## 1.1 计算机网络的概念和功能
+## 1.1_1 计算机网络的概念和功能
 
 ![image-20220825212321611](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252123764.png)
 
@@ -32,15 +32,42 @@
 
 - 第三阶段
 
+多级ISP结构服务商
+
 ![image-20220825213642073](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252136586.png)
 
 ### 总结
 
 ![image-20220825213801994](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252138433.png)
 
-## 1.2 计算机网络的组成和分类
+## 1.1_2 计算机网络的组成和分类
 
 ![image-20220825214135876](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252141663.png)
 
-### 组成
+### 计算机网络的组成
 
+#### 组成部分
+
+![image-20220831204829893](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312048462.png)
+
+#### 工作方式
+
+![image-20220831205806185](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312058728.png)
+
+![image-20220831210210024](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312102087.png)
+
+![image-20220831210506280](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312105691.png)
+
+#### 功能组成
+
+![image-20220831211002567](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312110912.png)
+
+### 计算机网络的分类
+
+![image-20220831212219136](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312122356.png)
+
+![image-20220831212430046](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312124437.png)
+
+### 总结
+
+![image-20220831213603095](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312136365.png)
