标准化工作与组成:标准化工作OSI(法定) TCP/IP(事实)  RFC(互联网标准的形式..

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -71,3 +71,23 @@
 ### 总结
 
 ![image-20220831213603095](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208312136365.png)
+
+## 1.1_3 标准化工作与组织(大纲已删)
+
+标准化工作
+
+![image-20220901073020604](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010730676.png)
+
+> 我是否可以指定一个标准?
+
+- 当然可以,,审核通过之后就是一个标准
+
+![image-20220901073249697](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010732435.png)
+
+相关组织
+
+![image-20220901073409807](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010734070.png)
+
+总结
+
+![image-20220901073500557](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010735781.png)
