性能指标(1):速率:进制为10的3次方       如果是容量:进制为2的10次方  带宽:最高传送数据率 ≠ 传播速率 , 吞吐量:单位时间内通过某个网络(信道,接口)的数据量(受网络的带宽或额定速率的限制...)

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -91,3 +91,19 @@
 总结
 
 ![image-20220901073500557](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010735781.png)
+
+## 1.1_4 性能指标(1)
+
+### 速率
+
+![image-20220901081444861](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010814265.png)
+
+### 带宽
+
+> 最高发送数据率 ≠ 传播速率
+
+![image-20220901082050519](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010820955.png)
+
+### 吞吐量
+
+![image-20220901082646148](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010826379.png)
