计算机网络的分层结构,协议接口以及服务       为什么要分层:因为工作繁杂,,分层可以让工作更加清晰...

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -107,3 +107,49 @@
 ### 吞吐量
 
 ![image-20220901082646148](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010826379.png)
+
+## 1.1_5 性能指标(2)
+
+![image-20220901083742085](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010837715.png)
+
+### 时延
+
+![image-20220901090108905](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010901129.png)
+
+### 时延带宽积
+
+![image-20220901091122668](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010911109.png)
+
+### 往返时延RTT
+
+![image-20220901092457537](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010925726.png)
+
+### 利用率
+
+![image-20220901092934488](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010929847.png)
+
+### 总结
+
+![image-20220901093121755](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010931331.png)
+
+## 1.1_1 分层结构,协议,接口和服务
+
+### 为什么要分层?
+
+> 为了将这些问题细化,,更方便解决
+
+![image-20220901094407867](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010944988.png)
+
+###  怎么分层?
+
+![image-20220901094843204](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010949461.png)
+
+### 分层结构
+
+![image-20220901095702417](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209010957738.png)
+
+### 总结
+
+![image-20220901100013794](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011000978.png)
+
+![image-20220901100146489](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011001584.png)
