--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -153,3 +153,27 @@
 ![image-20220901100013794](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011000978.png)
 
 ![image-20220901100146489](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011001584.png)
+
+## 1.2_2 OSI参考模型(1)
+
+![image-20220901101526974](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011015214.png)
+
+### OSI如何而来?
+
+> 为了`异构网络系统` 的互通
+
+![image-20220901102333202](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011023487.png)
+
+### OSI参考模型
+
+> `物链网淑惠试用`
+
+![image-20220901102616492](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011026026.png)
+
+#### 通信过程
+
+![image-20220901103240605](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011032940.png)
+
+> 打包和拆包的过程
+
+![image-20220901103802665](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011038858.png)
