--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -177,3 +177,45 @@
 > 打包和拆包的过程
 
 ![image-20220901103802665](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011038858.png)
+
+## 1.2_3 OSI参考模型(2)
+
+### 1.应用层
+
+![image-20220901104855027](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011048386.png)
+
+### 2.表示层
+
+![image-20220901105316640](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011053978.png)
+
+### 3.会话层
+
+![image-20220901111301407](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011113772.png)
+
+### 4.传输层
+
+![image-20220901124844908](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011248417.png)
+
+### 5.网络层
+
+> 传输单位:`数据报`,,可以分组传送
+>
+> - 关系:父与子的关系 
+
+ ![image-20220901130310033](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011303768.png)
+
+### 6.数据链路层
+
+> 传送单位:`帧`
+
+![image-20220901131107406](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011311878.png)
+
+### 7.物理层
+
+> 又称:傻瓜层
+
+![image-20220901132236347](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011323436.png)
+
+### 总结
+
+![image-20220901132348515](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011323370.png)
