TCP/IP四层参考模型,,对比与OSI七层模型来讲,TCP/IP四层模型的应用层包括OSI七层的(应用层,表示层,会话层)    会话层-会话层

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -154,7 +154,7 @@
 
 ![image-20220901100146489](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011001584.png)
 
-## 1.2_2 OSI参考模型(1)
+## 1.2_2 OSI七层参考模型(1)
 
 ![image-20220901101526974](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011015214.png)
 
@@ -178,7 +178,7 @@
 
 ![image-20220901103802665](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011038858.png)
 
-## 1.2_3 OSI参考模型(2)
+## 1.2_3 OSI七层参考模型(2)
 
 ### 1.应用层
 
@@ -219,3 +219,37 @@
 ### 总结
 
 ![image-20220901132348515](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011323370.png)
+
+## 1.2_4 TCP/IP四层参考模型
+
+![image-20220901142904597](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011429799.png)
+
+### TCP/IP `VS` ISO/OSI
+
+#### 相同点
+
+![image-20220901143020899](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011430350.png)
+
+#### 不同点
+
+> 由于TCP/IP模型,设计之初考虑到易购网`互联`问题
+>
+> TCP/IP将IP作为重要层次,则是`无连接`的
+>
+> 两个对角线都是无连接+面向连接
+>
+> 另一个则是传输层:端到端的`面向连接`
+
+![image-20220901150938692](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011509554.png)
+
+### 5层参考模型
+
+![image-20220901151430941](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011514173.png)
+
+#### 封装与解封装
+
+![image-20220901152431298](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011524159.png)
+
+### 总结
+
+![image-20220901152516365](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011525765.png)
