--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -253,3 +253,5 @@
 ### 总结
 
 ![image-20220901152516365](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011525765.png)
+
+![image-20220901160527808](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011605248.png)
