第二章:物理层的基本概念:通信基础(上层基础)&传输截至&设备(下层建筑)   物理层解决如何在传输媒体上传数据比特流,而不是指具体的传输媒体     物理层的主要任务:确定与传输媒体接口相关的一些特性->定义标准     分为四个标准(1.机械特性 2.电器特性 3.功能特性 4.规程特性)

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -255,3 +255,13 @@
 ![image-20220901152516365](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011525765.png)
 
 ![image-20220901160527808](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011605248.png)
+
+## 2.1_1 物理层基本概念
+
+> 了解上层建筑,然后在了解下层基础
+
+![image-20220901161102980](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011611374.png)
+
+### 物理层接口特性
+
+![image-20220901162426078](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011624377.png)
