数据通信基础(1):典型的数据通信模型:信源-

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -265,3 +265,33 @@
 ### 物理层接口特性
 
 ![image-20220901162426078](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011624377.png)
+
+## 2.1_2 数据通信基础知识(1)
+
+### 典型的数据通信模型
+
+![image-20220901164107413](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011641442.png)
+
+### 数据通信相关术语
+
+![image-20220901164558766](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011646996.png)
+
+### 设计数据通信需要考虑的因素
+
+#### 1.单/半/全双工通信
+
+![image-20220901165021191](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011650980.png)
+
+![image-20220901165153984](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011651396.png)
+
+#### 2.串/并行传输
+
+![image-20220901165411099](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011654645.png)
+
+#### 3.同/异步传输
+
+![image-20220901165733069](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011657286.png)
+
+### 总结
+
+![image-20220901170057914](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011700113.png)
