数据通信基础知识(2):码元:固定时长的信号波形,,数据传输速率:分为码元传输速率和信息传输速率...(信息=码元*码元所需要的比特数) 带宽:最高传输数据率...

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -295,3 +295,31 @@
 ### 总结
 
 ![image-20220901170057914](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209011700113.png)
+
+## 2.1_3 数据通信基础知识(2)
+
+### 码元
+
+> `固定时长`的`信号波形`
+
+![image-20220902072905060](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020729387.png)
+
+### 数据传输率速率
+
+> 信息传输速率 = 码元传输速率 * 一个码元的比特数
+
+![image-20220902074108670](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020741132.png)
+
+#### 思考题1
+
+![image-20220902074444236](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020744580.png)
+
+#### 思考题2
+
+![image-20220902074624888](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020746252.png)
+
+### 带宽
+
+> 模拟信号中,最高频率与最低频率 的差值
+
+![image-20220902083150185](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020831344.png)
