奈式准则和香浓定理: 奈式准则:不考虑噪音,极限数据传输速率=2Wlog2V (b/s)  香浓定理:考虑噪声,极限数据传输速率=Wlog2(1+S/N) (b/s)     信噪比:db=10log10(S/N)

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -304,7 +304,7 @@
 
 ![image-20220902072905060](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020729387.png)
 
-### 数据传输率速率
+### 数据传输速率
 
 > 信息传输速率 = 码元传输速率 * 一个码元的比特数
 
@@ -323,3 +323,37 @@
 > 模拟信号中,最高频率与最低频率 的差值
 
 ![image-20220902083150185](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020831344.png)
+
+## 2.1_4 奈式准则和香农定理
+
+### 失真
+
+![image-20220902083904063](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020839269.png)
+
+#### 码间串扰
+
+> 码元传输过快,导致无法区分出码元之间的界限
+
+![image-20220902084238979](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020842444.png)
+
+### 奈式准则
+
+> 理想状态下
+
+![image-20220902085107374](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020851258.png)
+
+#### 例题
+
+![image-20220902085332395](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020853246.png)
+
+### 香农定理
+
+> 考虑噪声
+
+![image-20220902091324740](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020913351.png)
+
+![image-20220902091626581](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020916960.png)
+
+#### 例题
+
+![image-20220902094330904](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020943250.png)
