编码与调制(1):基带信号(数字信号,适合距离较近)与宽带信号(模拟信号,,适合距离较远)...

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -357,3 +357,17 @@
 #### 例题
 
 ![image-20220902094330904](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209020943250.png)
+
+## 2.1_5 编码和调制(1)
+
+### 基带信号与宽带信号
+
+> 基带信号:`数字`信道,,适合距离较近
+>
+> 宽带信号:`模拟`信道,,将基带信号`调制`传输,,适合距离较远
+
+![image-20220902102921045](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021029189.png)
+
+### 编码与调制
+
+![image-20220902103533242](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021035866.png)
