编码与调制(2):分为数字和模拟信号之家的关系,,编码是最终变成数字信号   调制是最终变为模拟信号

--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -371,3 +371,51 @@
 ### 编码与调制
 
 ![image-20220902103533242](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021035866.png)
+
+## 2.1_6 编码与调制(2)
+
+### 数字数据编码为数字信号
+
+1. 非归零编码
+
+![image-20220902104850655](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021048096.png)
+
+4. 归零编码
+
+![image-20220902105004172](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021050483.png)
+
+5. 反向不归零编码
+
+![image-20220902105414972](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021054044.png)
+
+2. 曼彻斯特编码
+
+   > 由于一个周期内发生跳转,因此自带了时钟信号
+   >
+   > 而非归零编码则只携带数据信号
+
+![image-20220902105824545](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021058121.png)
+
+3.差分曼彻斯特编码
+
+![image-20220902110128330](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021101381.png)
+
+6. 4B/5B编码
+
+![image-20220902110347916](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021103202.png)
+
+### 数字数据调制为模拟信号
+
+![image-20220902111222484](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021112576.png)
+
+### 模拟数据编码为数字信号
+
+![image-20220902112426533](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021124525.png)
+
+### 模拟数据调制为模拟信号
+
+![image-20220902112758763](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021128633.png)
+
+### 总结
+
+![image-20220902150141456](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209021501831.png)
