物理层传输介质:导向性传输介质:1.双绞线 2.同轴电缆 3.光纤     非导向性传输介质:无线光波,微波,红外线,激光等...

--- a/计算机网络/第二章-物理层.md
+++ b/计算机网络/第二章-物理层.md
@@ -227,3 +227,35 @@
 ### 总结
 
 ![image-20220903075759856](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030758903.png)
+
+## 2.2_1 物理层传输介质
+
+![image-20220903081210127](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030812633.png)
+
+### 导向性传输介质
+
+#### 1.双绞线
+
+![image-20220903081449055](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030814259.png)
+
+#### 2.同轴电缆
+
+![image-20220903081640062](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030816303.png)
+
+#### 3.光纤
+
+![image-20220903081823700](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030818828.png)
+
+![image-20220903081947312](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030819339.png)
+
+##### 特点
+
+![image-20220903082108263](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030821901.png)
+
+### 非导向型传输介质
+
+![image-20220903082353191](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030823284.png)
+
+### 总结
+
+![image-20220903082500153](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030825460.png)
