--- a/计算机网络/第二章-物理层.md
+++ b/计算机网络/第二章-物理层.md
@@ -259,3 +259,13 @@
 ### 总结
 
 ![image-20220903082500153](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030825460.png)
+
+## 2.3_1 物理层设备
+
+### 中继器
+
+![image-20220903083159118](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030832036.png)
+
+### 集线器(多口中继器)
+
+![image-20220903083652644](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030836199.png)
