--- a/计算机网络/第二章-物理层.md
+++ b/计算机网络/第二章-物理层.md
@@ -269,3 +269,6 @@
 ### 集线器(多口中继器)
 
 ![image-20220903083652644](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030836199.png)
+
+## 第二章总结
+
