封装成帧和透明传输...分装成帧:在帧数据部分头部尾部部分加入帧定界(用于确定帧的边界)  帧同步:接收方应当接收二进制比特流中区分出帧的起始和终止    组帧的四种方法:1.字符计数法(如果Court字段出现错误,,则会导致严重错误) 2.字符填充法(实现起来比较复杂) 3.零比特法 4.违规编码法   后面两者更为常用

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -19,3 +19,39 @@
 ![image-20220903091848928](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030919878.png)
 
 ![image-20220903092156331](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030921386.png)
+
+## 3.2_1 封装成帧和透明传输
+
+### 封装成帧
+
+![image-20220903092826517](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030928020.png)
+
+### 透明传输
+
+![image-20220903094126342](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030941628.png)
+
+#### 1.字符计数法
+
+![image-20220903094650316](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030946781.png)
+
+#### 2.字符填充法
+
+![image-20220903094905122](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030949619.png)
+
+##### 具体实现过程
+
+> 发送时:填转义字符
+>
+> 接收时:删转义字符
+
+![image-20220903095301349](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209030953644.png)
+
+#### 3.零比特填充法
+
+> 5110
+
+![image-20220903100426450](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031004138.png)
+
+#### 4.违规编码法
+
+![image-20220903100720036](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031007273.png)
