--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -55,3 +55,31 @@
 #### 4.违规编码法
 
 ![image-20220903100720036](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031007273.png)
+
+## 3.3_1 差错控制(检错编码)
+
+### 差错从何而来?
+
+![image-20220903102413729](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031024020.png)
+
+### 差错控制
+
+![image-20220903105001852](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031050007.png)
+
+#### 检错编码
+
+##### 奇偶校验码
+
+![image-20220903105256416](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031052844.png)
+
+##### CRC循环冗余码
+
+![image-20220903110453626](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031104512.png)
+
+###### 例题
+
+![image-20220903111434628](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031114011.png)
+
+![image-20220903111551314](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031115961.png)
+
+![image-20220903112712222](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031127833.png)
