检错编码(奇偶校验,CRC循环冗余校验) 纠错编码:海明码(海明距离:最小不同个数)以及流程

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -83,3 +83,46 @@
 ![image-20220903111551314](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031115961.png)
 
 ![image-20220903112712222](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031127833.png)
+
+#### 纠错编码
+
+##### 海明码
+
+![image-20220903113647700](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031136975.png)
+
+##### 海明距离
+
+> 找不同的个数,,并取最小值
+
+![image-20220903113754637](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031137069.png)
+
+##### 海明码检错和纠错能力
+
+|  海明码   | 检错  |  纠错  |
+| :-------: | :---: | :----: |
+| 检/纠位数 |  `d`  |  `d`   |
+|   码距    | `d+1` | `2d+1` |
+
+##### 海明码流程
+
+###### 1.确定校验码位数r
+
+![image-20220903131015434](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031310202.png)
+
+###### 2.确定校验码和数据的位置
+
+![image-20220903131407713](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031314293.png)
+
+###### 3.求出校验码的值
+
+![image-20220903131815487](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031318196.png)
+
+###### 4.检错并纠错
+
+![image-20220903132307978](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220903132307978.png)
+
+![image-20220903133431683](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031334972.png)
+
+### 总结
+
+![image-20220903133951162](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031339561.png)
