流量控制与可靠传输机制:流量控制的方法:通知-等待协议 后退N帧协议(GBN) 以及选择重传协议(SR)  滑动窗口:实现可靠传输&流量控制

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -126,3 +126,23 @@
 ### 总结
 
 ![image-20220903133951162](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031339561.png)
+
+## 3.4_1 流量控制与可靠传输机制
+
+### 数据链路层的流量控制
+
+![image-20220903151219625](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031512671.png)
+
+#### 流量控制的方法
+
+![image-20220903151807581](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031518659.png)
+
+![image-20220903151954125](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031519463.png)
+
+### 可靠传输,滑动窗口,流量控制
+
+![image-20220903152437386](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031524204.png)
+
+### 总结
+
+![image-20220903152534473](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031525265.png)
