流量控制与可靠传输方法:停止-等待协议:无差错情况(收到确认帧才开始发送下一帧)  有差错情况:1.数据帧丢失或检测帧出错 2.ACK丢失 3.ACK迟到   性能较低    信道吞吐率=信道利用率*发送速率

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -146,3 +146,40 @@
 ### 总结
 
 ![image-20220903152534473](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031525265.png)
+
+## 3.4_2 停止-等待协议
+
+![image-20220903153852430](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031538403.png)
+
+### 应用情况
+
+#### 无差错情况
+
+![image-20220903154139550](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031541453.png)
+
+#### 有差错情况
+
+##### 1.数据帧丢失或检测到帧出错
+
+![image-20220903161433929](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031614702.png)
+
+##### 2.ACK(确认帧)丢失
+
+![image-20220903161758209](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031617373.png)
+
+##### 3.ACK(确认帧)迟到
+
+![image-20220903162033623](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031620968.png)
+
+### 性能分析
+
+![image-20220903162317027](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031623180.png)
+
+### 信道利用率&信道吞吐率
+
+![image-20220903162733996](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031627071.png)
+
+### 总结
+
+![image-20220903162936941](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031629237.png)
+
