后退N帧协议(GBN):由于停等协议效率太低,,引入GBN协议滑动窗口,,连续发送N帧,,维护一个确认帧ACK...也就是期待ack+1的帧发送过去...

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -183,3 +183,56 @@
 
 ![image-20220903162936941](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031629237.png)
 
+## 3.4_3 后退N帧协议(GBN)
+
+### 停等协议的弊端
+
+![image-20220903163602964](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031636641.png)
+
+#### 流水线计数
+
+![image-20220903195648116](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031956644.png)
+
+### GBN中的滑动窗口
+
+![image-20220903200003313](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032000236.png)
+
+![image-20220903200120456](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032001213.png)
+
+### 发送方必须响应的三件事
+
+![image-20220903200614008](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032006672.png)
+
+### 接收方要做的事
+
+![image-20220903201212573](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032012986.png)
+
+### 运行中的GBN
+
+> expection变量为接收方期待的发送帧序号
+
+![image-20220903201516549](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032015922.png)
+
+### 滑动窗口的长度
+
+![image-20220903201946572](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032019626.png)
+
+### GBN重点总结
+
+ ![image-20220903203212915](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032032391.png)
+
+#### 习题1
+
+![image-20220903203406521](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032034040.png)
+
+#### 习题2
+
+![image-20220903205818574](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032058806.png)
+
+### GBN性能
+
+![image-20220903210007071](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032100143.png)
+
+### 总结
+
+![image-20220903210211778](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032102200.png)
