流量控制与可靠传输:选择重传协议SR:由于GBN协议总是期待所得到的,并且总是丢弃不想要的,,这样造成了浪费,,效率变低,,SR来者不拒,,来一个要一个,,并且不是累计确认的,,一个一个确认

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -236,3 +236,51 @@
 ### 总结
 
 ![image-20220903210211778](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032102200.png)
+
+## 3.4_4 选择重传协议(SR)
+
+### GBN协议的弊端
+
+![image-20220903210620048](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032106363.png)
+
+### 选择重传协议的滑动窗口
+
+![image-20220903211539450](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032115150.png)
+
+### SR发送方必须响应的三件事
+
+![image-20220903211824215](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032118426.png)
+
+![image-20220903211853825](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032118158.png)
+
+### 接收方要做的事
+
+![image-20220903212019222](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032120198.png)
+
+![image-20220903212129063](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032121845.png)
+
+### 运行中的SR
+
+> 2帧超时重传
+
+![image-20220903212424035](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209032124715.png)
+
+### 滑动窗口的长度
+
+> 这里的n表示是窗口长度所需的比特数
+>
+> 发送窗口大小最好与接收窗口大小`相等`
+
+![image-20220904084811869](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040848124.png)
+
+### SR重点总结
+
+![image-20220904090630949](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040906329.png)
+
+#### 例题1
+
+![image-20220904090754974](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040907459.png)
+
+### 总结
+
+![image-20220904090831667](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040908254.png)
