--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -284,3 +284,49 @@
 ### 总结
 
 ![image-20220904090831667](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040908254.png)
+
+## 3.5_1 介质访问控制
+
+![image-20220904091627677](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040916511.png)
+
+### 介质访问控制
+
+![image-20220904091855121](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040918845.png)
+
+#### 信道划分介质访问控制
+
+> `广播`信号逻辑成`点对点`信号
+
+![image-20220904092114147](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040921309.png)
+
+#### 静态划分信道
+
+![image-20220904092410843](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040924988.png)
+
+##### 1.频分复用FDM
+
+![image-20220904092546114](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040925717.png)
+
+##### 2.时分复用TDM
+
+> 效率比较低...
+
+![image-20220904092806823](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040928018.png)
+
+##### 3.统计时分复用STDM
+
+![image-20220904093133106](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040931655.png)
+
+##### 4.波分复用WDM
+
+> 光的频分复用
+
+![image-20220904093511988](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040935455.png)
+
+##### 5.码分复用CDM
+
+![image-20220904094747052](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040947685.png)
+
+###### CD还是CS?
+
+![image-20220904094954089](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040949324.png)
