--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -330,3 +330,29 @@
 ###### CD还是CS?
 
 ![image-20220904094954089](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040949324.png)
+
+## 3.5_2 ALOHA协议
+
+> 随机访问->不协调->冲突
+
+![image-20220904095613223](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209040956429.png)
+
+![image-20220904100341028](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041003911.png)
+
+### 纯ALOHA协议
+
+> 想发就发
+
+![image-20220904101331213](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041013441.png)
+
+### 时隙ALOHA协议
+
+> 纯ALOHA协议太随意,容易出冲突
+>
+> 这里要求在冲突在下一个时间片开始时刻发送
+
+![image-20220904101653863](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041016138.png)
+
+### 总结
+
+![image-20220904101843520](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041018439.png)
