--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -356,3 +356,33 @@
 ### 总结
 
 ![image-20220904101843520](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041018439.png)
+
+## 3.5_3 CSMA协议
+
+> ALOHA协议:不停就说...
+>
+> CSMA协议:先听再说....
+
+![image-20220904104859245](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041049464.png)
+
+### 1.坚持CSMA
+
+> 监听信道`忙`
+
+![image-20220904105054435](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041050464.png)
+
+### 2.非坚持CSMA
+
+> 监听信道`忙`
+
+![image-20220904105348450](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041053743.png)
+
+### 3.p-坚持CSMA
+
+> 监听信道`空闲`
+
+![image-20220904110549448](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041105653.png)
+
+### 三种CSMA对比总结
+
+![image-20220904111048585](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041110607.png)
