--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -385,4 +385,48 @@
 
 ### 三种CSMA对比总结
 
-![image-20220904111048585](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041110607.png)
+![image-20220904111048585](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220904111048585.png)
+
+## !!!3.5_4 CSMA/CD协议
+
+> 先听再说,,边听边说
+
+![image-20220904111517368](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041115415.png)
+
+> 半双工
+
+![image-20220904111842355](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041118669.png)
+
+### 传播时延对载波监听的影响
+
+> 发生冲突和碰撞
+
+![image-20220904112050005](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041120370.png)
+
+#### 具体细节
+
+![image-20220904125800384](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041258941.png)
+
+![image-20220904125958556](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041259846.png)
+
+### 如何确定碰撞后的重传时机
+
+![image-20220904130652912](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041306397.png)
+
+#### 截断二进制规避算法
+
+![image-20220904131245842](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041312974.png)
+
+####  例题
+
+![image-20220904131404386](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041314145.png)
+
+### 最小帧长问题
+
+![image-20220904131627892](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041316030.png)
+
+![image-20220904131837699](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041318034.png)
+
+### 总结
+
+![image-20220904132314611](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041323243.png)
