动态分配信道:随机访问介质访问控制:CSMA/CA协议:也是先听后说,但是有所不同

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -119,7 +119,7 @@
 
 ###### 4.检错并纠错
 
-![image-20220903132307978](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220903132307978.png)
+![image-20220903132307978](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041357179.png)
 
 ![image-20220903133431683](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209031334972.png)
 
@@ -430,3 +430,19 @@
 ### 总结
 
 ![image-20220904132314611](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041323243.png)
+
+## 3.5_5 CSMA/CA协议
+
+> CSMA/CD:碰撞检测   `有线网`
+>
+> CSMA/CA:碰撞避免   `无线网`
+
+![image-20220904133630800](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041336938.png)
+
+### 工作原理
+
+![image-20220904135416878](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041357670.png)
+
+### CSMA/CD `VS` CSMA/CA
+
+![image-20220904135725204](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041357890.png)
