MAC(介质访问控制协议):轮询访问:1.轮询协议 2.令牌传递协议

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -446,3 +446,30 @@
 ### CSMA/CD `VS` CSMA/CA
 
 ![image-20220904135725204](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041357890.png)
+
+## 3.5_6 轮询访问介质访问控制
+
+![image-20220904143659015](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041437484.png)
+
+### 轮询协议
+
+![image-20220904144000027](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041440645.png)
+
+### 令牌传递协议
+
+> 修改令牌的标志位
+>
+> 令牌到主机A时候,,主机A复制一个帧到令牌上,,然后主机D在进行检查,然后再考虑是否传递令牌
+>
+> 解决了
+>
+> - 随机访问的产生冲突问题
+> - 独占整个资源
+
+![image-20220904144245380](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041442053.png)
+
+![image-20220904144804285](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041448718.png)
+
+### MAC协议总结
+
+![image-20220904144945713](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041449820.png)
