局域网的基本概念以及体系结构:网络拓扑(星型拓扑,总线型拓扑(最常用),环形拓扑,树形拓扑)

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -612,4 +612,4 @@
 
 > 理论情况下:固态硬盘的寿命 
 
-![image-20220831203811880](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220831203811880.png)
+![image-20220831203811880](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041659663.png)
