--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -385,7 +385,7 @@
 
 ### 三种CSMA对比总结
 
-![image-20220904111048585](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220904111048585.png)
+![image-20220904111048585](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041657755.png)
 
 ## !!!3.5_4 CSMA/CD协议
 
@@ -473,3 +473,45 @@
 ### MAC协议总结
 
 ![image-20220904144945713](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041449820.png)
+
+## 3.6_1 局域网基本概念和体系结构
+
+![image-20220904164424782](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041644528.png)
+
+### 局域网拓扑结构
+
+> 局域网常用`总线型拓扑结构`
+
+![image-20220904164753315](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041647646.png)
+
+### 局域网传输介质
+
+![image-20220904164918057](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041649691.png)
+
+### 局域网介质访问控制方法
+
+![image-20220904165225831](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041652505.png)
+
+### 局域网的分类
+
+![image-20220904165654260](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041656733.png)
+
+### IEEE 802标准
+
+> 1980年 2月成立得来
+>
+> 与`以太网`紧密相连,,,以太网也称"802.3局域网"
+
+- 巧记
+  - 802.5 (令牌环网,,,容易出问题,,呜呜呜5)
+  - 802.8:(光纤,,,很贵,需要很多钱,,,发发发8)
+
+![image-20220904170700914](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041707229.png)
+
+#### MAC子层和LLC子层
+
+![image-20220904171033228](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041710527.png)
+
+### 总结
+
+![image-20220904171455435](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041714325.png)
