--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -93,7 +93,7 @@
 
 ## 3.1_3 覆盖与交换
 
-<img src="C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220824173221424.png" alt="image-20220824173221424" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041659185.png" alt="image-20220824173221424" style="zoom:50%;" />
 
 ### 覆盖技术
 
