--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -515,3 +515,37 @@
 ### 总结
 
 ![image-20220904171455435](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041714325.png)
+
+## 3.6_2 以太网概述
+
+> 又称:802.3局域网
+
+![image-20220904172306982](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041723541.png)
+
+### 无连接,不可靠服务
+
+![image-20220904172514450](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041725573.png)
+
+### 传输介质与拓扑结构
+
+![image-20220904172706980](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041727263.png)
+
+### !!! 10BASE-T以太网
+
+![image-20220904172912907](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041729158.png)
+
+### 适配器和MAC地址
+
+![image-20220904173144294](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041731050.png)
+
+### 以太网MAC帧
+
+![image-20220904173641772](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041736776.png)
+
+### 高速以太网
+
+![image-20220904174208162](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041742361.png)
+
+### 总结
+
+![image-20220904174503023](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041745662.png)
