--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -549,3 +549,25 @@
 ### 总结
 
 ![image-20220904174503023](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209041745662.png)
+
+## 3.6_3 IEEE 802.11 无线局域网
+
+![image-20220904205424423](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042054002.png)
+
+### 802.11 的MAC帧头格式
+
+![image-20220904205940640](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042059023.png)
+
+> 一般根据题目的意思来
+
+![image-20220904210143038](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042101210.png)
+
+### 无线局域网的分类
+
+#### 1.有固定基础设施无线局域网
+
+![image-20220904210500175](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042105615.png)
+
+#### 2.无固定基础设施无线局域网的自组织网络
+
+![image-20220904210539934](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042105057.png)
