VLAN的基本概念和原理:  由于传统局域网的局限(缺乏流量隔离,管理用户不变,难以移动,,路由器成本较高)  因此在逻辑上构成一个单独的广播域/不同的子网称为:VLAN  IEEE802.1Q帧之间表示的Tag后面12位是VLAN的ID,唯一的表示了此以太网属于哪一个VLAN

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -571,3 +571,53 @@
 #### 2.无固定基础设施无线局域网的自组织网络
 
 ![image-20220904210539934](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042105057.png)
+
+## 3.6_4 VLAN的基本概念与原理
+
+### 传统局域网的局限
+
+![image-20220904211438046](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042114883.png)
+
+### VLAN的基本概念
+
+> 逻辑上构成一个单独的广播域/不同的子网
+
+![image-20220904211630107](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042116413.png)
+
+### VLAN的实现
+
+1. 基于端口的VLAN技术
+
+![image-20220904211936644](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042119047.png)
+
+2. 基于MAC地址的VLAN技术
+
+![image-20220904212023768](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042120129.png)
+
+> `tag=1`表示:在虚拟局域网VLAN1中
+
+![image-20220904212333340](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042123100.png)
+
+#### IEEE 802.1Q帧
+
+> 主机和交换机之间传输的必然是普通的`MAC帧`
+>
+> 交换机会将主机传输过来的MAC帧贴标签Tag表示VLAN
+>
+> 交换机和交换机之间传输的必然是`802.1Q帧`
+
+![image-20220904212643519](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042126536.png)
+
+#### 练习
+
+> 查VLAN表
+>
+> 此时A和D,H无法实现访问
+>
+> 如果有路由器和三层交换机,可以解决此问题
+
+![image-20220904213207493](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042132122.png)
+
+#### 题目
+
+![image-20220904213451268](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042134408.png)
